need to check if at end of line